Fixed  New-friend  information fields align & addaptive improvements/

--- a/src/styles/containers/Inbox.scss
+++ b/src/styles/containers/Inbox.scss
@@ -67,13 +67,9 @@ padding: 3px;
    {
 		 display: inline-block;
 		 color: rgba(41, 48, 55, 0.8);
-		 padding-left: 5px;
-		 padding-top: 5px;
+		padding: 3% 3% 0% 3%;
 		 font-weight: 300;
    }
-	 .SecondName {
-		 padding-inline-end: 50%;
-	 }
      .StartConversation
      {
 	     color: rgba(41, 48, 55, 0.8);
